--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
           integrity="sha384-QWTKZyjpPEjSv5WaRU90FeRpok6YctnYmDr5pNIyT2bRjXhOJMhjY6hW+ALEWIH"
           crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYfOtY3HB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdsK1eN7N6jleHz"
-            crossorigin="anonymous"></script>
+    <style>
+        .product-column {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .product-column img {
+            width: 100px;
+            height: 200px;
+            margin-bottom: 10px;
+        }
+        .product-column label {
+            font-size: 16px;
+            font-weight: bold;
+        }
+        .product-column input {
+            width: 100px;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
     <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
@@ -20,39 +36,39 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-2 text-center">
+                <div class="col-2 product-column">
                     <label id="product1">Adidas</label>
-                    <img src="adidas.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+                    <img src="adidas.jpg" class="img-thumbnail"/><br>
                     <label for="product1" id="price1">5000.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
-                <div class="col-2 text-center">
+                <div class="col-2 product-column">
                     <label id="product2">Nike</label>
-                    <img src="nike.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+                    <img src="nike.jpg" class="img-thumbnail"/><br>
                     <label for="product2" id="price2">6500.00</label>
                     <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
-                <div class="col-2 text-center">
+                <div class="col-2 product-column">
                     <label id="product3">Puma</label>
-                    <img src="puma.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+                    <img src="puma.jpg" class="img-thumbnail"/><br>
                     <label for="product3" id="price3">7450.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
-                <div class="col-2 text-center">
+                <div class="col-2 product-column">
                     <label id="product4">Converse</label>
-                    <img src="converse.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+                    <img src="converse.jpg" class="img-thumbnail"/><br>
                     <label for="product4" id="price4">3999.00</label>
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
-                <div class="col-2 text-center">
+                <div class="col-2 product-column">
                     <label id="product5">Sketcher</label>
-                    <img src="sketcher.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+                    <img src="sketcher.jpg" class="img-thumbnail"/><br>
                     <label for="product5" id="price5">5999.00</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
-                <div class="col-2 text-center">
+                <div class="col-2 product-column">
                     <label id="product6">Reebok</label>
-                    <img src="reebok.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+                    <img src="reebok.jpg" class="img-thumbnail"/><br>
                     <label for="product6" id="price6">4959.00</label>
                     <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
                 </div>
@@ -68,6 +84,6 @@
             </div>
         </div>
     </div>
-<script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
