--- a/index.html
+++ b/index.html
@@ -12,17 +12,31 @@
             margin-bottom: 20px;
         }
         .product-column img {
-            width: 100px;
+            width: 200px;
             height: 200px;
             margin-bottom: 10px;
         }
         .product-column label {
-            font-size: 16px;
+            display: block;
+            font-size: 18px;
             font-weight: bold;
+        }
+        .product-column .product-price {
+            margin-top: 10px;
+            font-size: 16px;
         }
         .product-column input {
             width: 100px;
             margin-top: 10px;
+        }
+        .order-section {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .order-section textarea,
+        .order-section input {
+            display: block;
+            margin: 10px auto;
         }
     </style>
 </head>
@@ -39,47 +53,47 @@
                 <div class="col-4 product-column">
                     <label id="product1">Adidas</label>
                     <img src="adidas.jpg" class="img-thumbnail"/><br>
-                    <label for="product1" id="price1">5000.00</label>
+                    <label for="product1" class="product-price" id="price1">5000.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 product-column">
                     <label id="product2">Nike</label>
                     <img src="nike.jpg" class="img-thumbnail"/><br>
-                    <label for="product2" id="price2">6500.00</label>
+                    <label for="product2" class="product-price" id="price2">6500.00</label>
                     <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 product-column">
                     <label id="product3">Puma</label>
                     <img src="puma.jpg" class="img-thumbnail"/><br>
-                    <label for="product3" id="price3">7450.00</label>
+                    <label for="product3" class="product-price" id="price3">7450.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 product-column">
                     <label id="product4">Converse</label>
                     <img src="converse.jpg" class="img-thumbnail"/><br>
-                    <label for="product4" id="price4">3999.00</label>
+                    <label for="product4" class="product-price" id="price4">3999.00</label>
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 product-column">
                     <label id="product5">Sketcher</label>
                     <img src="sketcher.jpg" class="img-thumbnail"/><br>
-                    <label for="product5" id="price5">5999.00</label>
+                    <label for="product5" class="product-price" id="price5">5999.00</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 product-column">
                     <label id="product6">Reebok</label>
                     <img src="reebok.jpg" class="img-thumbnail"/><br>
-                    <label for="product6" id="price6">4959.00</label>
+                    <label for="product6" class="product-price" id="price6">4959.00</label>
                     <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
                 </div>
             </div>
-            <div class="row">
+            <div class="row order-section">
                 <div class="col-12">
                     <label for="carts">Orders</label><br>
-                    <textarea class="form-control" rows="29" id="carts" readonly style="width: 350px; height: 400px; font-size: 12px;"></textarea>
-                    <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
-                    <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
-                    <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+                    <textarea class="form-control" rows="10" id="carts" readonly style="width: 350px; font-size: 12px;"></textarea>
+                    <input type="text" class="form-control border-0" id="total" readonly placeholder="Total" style="width: 200px;"/>
+                    <input type="number" class="form-control" id="cash" placeholder="Cash Tendered" style="width: 200px;"/>
+                    <input type="text" class="form-control border-0" id="change" readonly placeholder="Change" style="width: 200px;"/>
                 </div>
             </div>
         </div>
