--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <title>Ginalyn Ramos BSIT 3 C</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjSv5WaRU90FeRpok6YctnYmDr5pNIyT2bRjXhOJMhjY6hW+ALEWIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjSv5WaRU90FeRpok6YctnYmDr5pNIyT2bRjXhOJMhjY6hW+ALEWIH"
+          crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,37 +17,37 @@
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
-                <div class="col-2 product-column">
+                <div class="col-6 col-md-4 col-lg-2 product-column">
                     <label id="product1">Adidas</label>
                     <img src="adidas.jpg" class="img-thumbnail"/><br>
                     <label for="product1" class="product-price" id="price1">5000.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
-                <div class="col-2 product-column">
+                <div class="col-6 col-md-4 col-lg-2 product-column">
                     <label id="product2">Nike</label>
                     <img src="nike.jpg" class="img-thumbnail"/><br>
                     <label for="product2" class="product-price" id="price2">6500.00</label>
                     <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
-                <div class="col-2 product-column">
+                <div class="col-6 col-md-4 col-lg-2 product-column">
                     <label id="product3">Puma</label>
                     <img src="puma.jpg" class="img-thumbnail"/><br>
                     <label for="product3" class="product-price" id="price3">7450.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
-                <div class="col-2 product-column">
+                <div class="col-6 col-md-4 col-lg-2 product-column">
                     <label id="product4">Converse</label>
                     <img src="converse.jpg" class="img-thumbnail"/><br>
                     <label for="product4" class="product-price" id="price4">3999.00</label>
                     <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
-                <div class="col-2 product-column">
+                <div class="col-6 col-md-4 col-lg-2 product-column">
                     <label id="product5">Sketcher</label>
                     <img src="sketcher.jpg" class="img-thumbnail"/><br>
                     <label for="product5" class="product-price" id="price5">5999.00</label>
                     <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
-                <div class="col-2 product-column">
+                <div class="col-6 col-md-4 col-lg-2 product-column">
                     <label id="product6">Reebok</label>
                     <img src="reebok.jpg" class="img-thumbnail"/><br>
                     <label for="product6" class="product-price" id="price6">4959.00</label>
