--- a/index.html
+++ b/index.html
@@ -1,77 +1,70 @@
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f8f9fa; /* Light gray background color */
-    color: #333;
-    margin: 0;
-    padding: 0;
-}
-
-.custom-heading {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2.5rem;
-    color: #007bff;
-    margin: 0;
-    padding: 10px;
-}
-
-.hr {
-    border: 1px solid #007bff;
-    width: 50%;
-    margin: 0 auto;
-}
-
-.product-column {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.product-column img {
-    width: 100%;
-    max-width: 200px;
-    height: auto;
-    margin-bottom: 10px;
-    border-radius: 10px;
-}
-
-.product-column label {
-    display: block;
-    font-size: 1.1rem;
-    font-weight: bold;
-    color: #007bff;
-}
-
-.product-price {
-    margin-top: 10px;
-    font-size: 1rem;
-    color: #28a745;
-}
-
-.product-column input {
-    width: 100px;
-    margin-top: 10px;
-    border-radius: 5px;
-}
-
-.order-section {
-    margin-top: 40px;
-}
-
-.order-section label {
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #343a40;
-}
-
-.order-section textarea,
-.order-section input {
-    display: block;
-    margin: 10px auto;
-    width: 100%;
-    max-width: 350px;
-    font-size: 1rem;
-    border-radius: 5px;
-}
-
-.order-section input[readonly] {
-    background-color: #e9ecef;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Ginalyn Ramos BSIT 3 C</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjSv5WaRU90FeRpok6YctnYmDr5pNIyT2bRjXhOJMhjY6hW+ALEWIH"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <marquee behavior="scroll" direction="left" class="custom-heading">GINALYN'S SHOE MARKET</marquee>
+                    <hr class="hr"/>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-6 col-md-4 col-lg-2 product-column">
+                    <label id="product1">Adidas</label>
+                    <img src="adidas.jpg" class="img-thumbnail"/><br>
+                    <label for="product1" class="product-price" id="price1">5000.00</label>
+                    <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2 product-column">
+                    <label id="product2">Nike</label>
+                    <img src="nike.jpg" class="img-thumbnail"/><br>
+                    <label for="product2" class="product-price" id="price2">6500.00</label>
+                    <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2 product-column">
+                    <label id="product3">Puma</label>
+                    <img src="puma.jpg" class="img-thumbnail"/><br>
+                    <label for="product3" class="product-price" id="price3">7450.00</label>
+                    <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2 product-column">
+                    <label id="product4">Converse</label>
+                    <img src="converse.jpg" class="img-thumbnail"/><br>
+                    <label for="product4" class="product-price" id="price4">3999.00</label>
+                    <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2 product-column">
+                    <label id="product5">Sketcher</label>
+                    <img src="sketcher.jpg" class="img-thumbnail"/><br>
+                    <label for="product5" class="product-price" id="price5">5999.00</label>
+                    <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
+                </div>
+                <div class="col-6 col-md-4 col-lg-2 product-column">
+                    <label id="product6">Reebok</label>
+                    <img src="reebok.jpg" class="img-thumbnail"/><br>
+                    <label for="product6" class="product-price" id="price6">4959.00</label>
+                    <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
+                </div>
+            </div>
+            <div class="row order-section">
+                <div class="col-12 text-center">
+                    <label for="carts">Orders</label><br>
+                    <textarea class="form-control" rows="10" id="carts" readonly style="width: 350px; font-size: 12px;"></textarea>
+                    <input type="text" class="form-control border-0" id="total" readonly placeholder="Total" style="width: 200px;"/>
+                    <input type="number" class="form-control" id="cash" placeholder="Cash Tendered" style="width: 200px;"/>
+                    <input type="text" class="form-control border-0" id="change" readonly placeholder="Change" style="width: 200px;"/>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="index.js"></script>
+</body>
+</html>
